Fix layout issues, added room join messages, warnings

--- a/style/app.css
+++ b/style/app.css
@@ -111,6 +111,22 @@ nav.navbar .container-fluid .btn {
     box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 }
 
+.loginmodal-container .room-message {
+    font-size: 26px;
+}
+
+.loginmodal-container .btn-left {
+    position: absolute;
+    left: 0;
+    margin-left: 30px;
+}
+
+.loginmodal-container .btn-right {
+    position: absolute;
+    right: 0;
+    margin-right: 30px;
+}
+
 .loginmodal {
     text-align: center;
     font-size: 14px;
